--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "antd": "^4.17.3",
+    "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "sass": "^1.45.0",
+    "sass-loader": "^12.4.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
